src-tauri/build_error.txt
    Checking tauri-app v0.1.0 (C:\_new_ai_project\uriLocalShare\src-tauri)
error[E0432]: unresolved import `smb::client::Connection`
 --> src\lib.rs:5:27
  |
5 | use smb::client::{Client, Connection};
  |                           ^^^^^^^^^^ no `Connection` in `client`
  |
  = help: consider importing this struct instead:
          smb::Connection

error[E0432]: unresolved import `futures`
 --> src\p2p.rs:1:5
  |
1 | use futures::StreamExt;
  |     ^^^^^^^ help: a similar path exists: `libp2p::futures`

warning: unused imports: `Multiaddr`, `PeerId`, and `Swarm`
 --> src\p2p.rs:3:85
  |
3 |     gossipsub, mdns, noise, swarm::NetworkBehaviour, swarm::SwarmEvent, tcp, yamux, Multiaddr, PeerId, Swarm,
  |                                                                                     ^^^^^^^^^  ^^^^^^  ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `login_anonymous` found for struct `smb::Client` in the current scope
  --> src\lib.rs:36:12
   |
36 |     client.login_anonymous().await.map_err(|e| format!("Login failed: {}", e))?;
   |            ^^^^^^^^^^^^^^^ method not found in `smb::Client`

error[E0282]: type annotations needed
  --> src\lib.rs:36:5
   |
36 |     client.login_anonymous().await.map_err(|e| format!("Login failed: {}", e))?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0061]: this method takes 1 argument but 0 arguments were supplied
   --> src\lib.rs:39:25
    |
 39 |     let shares = client.list_shares().await.map_err(|e| format!("Failed to list shares: {}", e))?;
    |                         ^^^^^^^^^^^-- argument #1 of type `&str` is missing
    |
note: method defined here
   --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\smb-0.11.1\src\client\smb_client.rs:153:18
    |
153 |     pub async fn list_shares(&self, server: &str) -> crate::Result<Vec<ShareInfo1>> {
    |                  ^^^^^^^^^^^
help: provide the argument
    |
 39 |     let shares = client.list_shares(/* &str */).await.map_err(|e| format!("Failed to list shares: {}", e))?;
    |                                     ++++++++++

error[E0609]: no field `name` on type `smb_rpc::interface::srvsvc::ShareInfo1`
  --> src\lib.rs:41:37
   |
41 |     Ok(shares.into_iter().map(|s| s.name).collect())
   |                                     ^^^^ unknown field
   |
   = note: available fields are: `netname`, `share_type`, `remark`

error[E0599]: no method named `with_quic` found for struct `SwarmBuilder<Provider, Phase>` in the current scope
  --> src\p2p.rs:43:14
   |
36 |           let mut swarm = libp2p::SwarmBuilder::with_new_identity()
   |  _________________________-
37 | |             .with_tokio()
38 | |             .with_tcp(
39 | |                 tcp::Config::default(),
...  |
42 | |             )?
43 | |             .with_quic()
   | |             -^^^^^^^^^ method not found in `SwarmBuilder<Tokio, QuicPhase<impl AuthenticatedMultiplexedTransport>>`
   | |_____________|
   |
   |
   = note: the full name for the type has been written to 'C:\_new_ai_project\uriLocalShare\src-tauri\target\debug\deps\tauri_app_lib-3d980e956398b1b8.long-type-85036960246944701.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
  --> src\p2p.rs:44:30
   |
44 |             .with_behaviour(|key| {
   |                              ^^^
...
59 |                     gossipsub::MessageAuthenticity::Signed(key.clone()),
   |                                                            --- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
44 |             .with_behaviour(|key: /* Type */| {
   |                                 ++++++++++++

error[E0282]: type annotations needed
  --> src\p2p.rs:66:33
   |
66 |             .with_swarm_config(|c| c.with_idle_connection_timeout(Duration::from_secs(60)))
   |                                 ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
66 |             .with_swarm_config(|c: /* Type */| c.with_idle_connection_timeout(Duration::from_secs(60)))
   |                                  ++++++++++++

Some errors have detailed explanations: E0061, E0282, E0432, E0599, E0609.
For more information about an error, try `rustc --explain E0061`.
warning: `tauri-app` (lib) generated 1 warning
error: could not compile `tauri-app` (lib) due to 9 previous errors; 1 warning emitted
